# DevSuite

./: .env.sample  .gitignore  README.md  justfile  manage.py  notifi.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/clients/: apps.py  routes.py  serializers.py  urls.py
apps/core/: routes.py  serializers.py  urls.py
apps/finance/: apps.py  routes.py  serializers.py  urls.py
apps/notifications/: routes.py  serializers.py  urls.py
apps/productivity/: apps.py  routes.py  serializers.py  urls.py
apps/projects/: apps.py  routes.py  serializers.py  urls.py
apps/services/: apps.py  routes.py  serializers.py  urls.py
config/: urls.py
config/settings/: base.py  development.py  production.py
scripts/: run_notifications.sh
src/: asgi.py  urls.py
src/admin/: __init__.py  base.py  clients.py  finance.py  notifications.py  productivity.py  projects.py  services.py  shared.py
src/api/: README.md
src/migrations/: 0001_initial.py  0002_alter_client_phone.py  0003_notification.py  0004_alter_invoice_due_date.py  0005_alter_client_phone.py
src/models/: README.md  __init__.py  clients.py  finance.py  notifications.py  productivity.py  projects.py  services.py
src/settings/: base.py  development.py  production.py
static/css/: tailwind.css
templates/base/: dashboard.html  login.html
templates/clients/: client_form.html  client_list.html
templates/finance/: dashboard.html  expense_form.html  expense_list.html  invoice_form.html  invoice_list.html
templates/projects/: project_form.html  (+2 more)
tests/: test_models.py  test_notifications.py
(+28 files in other folders)
