[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "django",
    "django-environ",
    "django-jazzmin",
    "whitenoise",
    "mysqlclient",
    "psycopg2-binary",
    "gunicorn",
    "django-components>=0.143.2",
    "django-htmx>=1.27.0",
    "django-nepali-datetime-field>=0.8.0",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "babel>=2.17.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["."]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
